--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Mr Rivera trucking</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel = "stylesheet" type = "text/css" href = "style.css" />
 <link href="https://fonts.googleapis.com/css?family=Abel&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -47,9 +48,15 @@
         <div class='video-holder'>
                 <p class='text-video'>We make shipping easy for companies and put more money to trucking<br> companies faster. Watch video to learn more</p>
                 <span class='my-video'>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/GG5qVN2R9YQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe class='mini' width="560" height="315" src="https://www.youtube.com/embed/GG5qVN2R9YQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </span>                 
         </div>
+      </section>
+
+      <section class='option'>
+        <div class='shippers'><i class="fa fa-cogs fa-7x"></i>SHIPPERS</div>
+        <div class='carriers'><i class="fa fa-truck fa-7x"></i>CARRIERS</div>
+        <div class='technology'><i class="fa fa-globe fa-7x"></i>TECHNOLOGY</div>
       </section>
 
 </body>
