icons on responsive

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="centered">
                 <h1 class='text-centered2'>Tacos<br>Al Carbon</h1>
                 <p class='text-centered'>los polllitos dicen pio pio pio<br> cuando tienen hambre y cuando</p>
-                <a href="www.yahoo.com" target="_blank"><button type="button" class="btn btn-danger" class='text-centered'>Learn More</button></a>
+                <a href="www.google.com" target="_blank"><button type="button" class="btn btn-danger" class='text-centered'>Learn More</button></a>
             </div>
           </div>
       </section>
@@ -46,7 +46,7 @@
 
       <section class='video'>
         <div class='video-holder'>
-                <p class='text-video'>We make shipping easy for companies and put more money to trucking<br> companies faster. Watch video to learn more</p>
+                <p class='text-video'>We make shipping easy for companies and put<br> more money to trucking<br> companies faster. Watch video to learn more</p>
                 <span class='my-video'>
                     <iframe class='mini' width="560" height="315" src="https://www.youtube.com/embed/GG5qVN2R9YQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </span>                 
@@ -54,9 +54,27 @@
       </section>
 
       <section class='option'>
-        <div class='shippers'><i class="fa fa-cogs fa-7x"></i>SHIPPERS</div>
-        <div class='carriers'><i class="fa fa-truck fa-7x"></i>CARRIERS</div>
-        <div class='technology'><i class="fa fa-globe fa-7x"></i>TECHNOLOGY</div>
+        <div class='shippers'>
+          <i class="fa fa-cogs fa-5x"></i>
+            <p class='p-option'>SHIPPERS</p>
+          <a href="www.google.com" target="_blank">
+            <button type="button" class="btn btn-danger" class='text-centered'>Learn More</button>
+          </a>
+        </div>
+        <div class='carriers'>
+          <i class="fa fa-truck fa-5x"></i>
+          <p class='p-option'>CARRIERS</p>
+          <a href="www.google.com" target="_blank">
+            <button type="button" class="btn btn-danger" class='text-centered'>Learn More</button>
+          </a>
+        </div>
+        <div class='technology'>
+          <i class="fa fa-globe fa-5x"></i>
+          <p class='p-option'>TECHNOLOGY</p>
+          <a href="www.google.com" target="_blank">
+            <button type="button" class="btn btn-danger" class='text-centered'>Learn More</button>
+          </a>
+        </div>
       </section>
 
 </body>
