added a who we are section

--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Mr Rivera trucking</title>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel = "stylesheet" type = "text/css" href = "style.css" />
-<link href="https://fonts.googleapis.com/css?family=Abel&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Mr Rivera trucking</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel = "stylesheet" type = "text/css" href = "style.css" />
+  <link href="https://fonts.googleapis.com/css?family=Abel&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+</head>
 <body>
 
     <nav class="navbar sticky-top navbar-expand-lg bg-info" navbar-light bg-light">
-        <a class="navbar-brand" href="#"><img src="logo.png" width="30" height="30" alt=""></a>
+        <a class="navbar-brand" href="#"><img src="image/logo.png" width="30" height="30" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -27,11 +29,11 @@
 
       <section class="truck-background">
         <div class="myContainer">
-            <img class="truck" src="truck.jpg" alt="Snow" style="width:100%;">
+            <img class="truck" src="image/truck.jpg" alt="Snow" style="width:100%;">
             <div class="centered">
                 <h1 class='text-centered2'>Tacos<br>Al Carbon</h1>
                 <p class='text-centered'>los polllitos dicen pio pio pio<br> cuando tienen hambre y cuando</p>
-                <a href="www.google.com" target="_blank"><button type="button" class="btn btn-danger" class='text-centered'>Learn More</button></a>
+                <a href="https://www.google.com" target="_top _blank"><button type="button" class="btn btn-danger" class='text-centered'>Learn More</button></a>
             </div>
           </div>
       </section>
@@ -56,23 +58,35 @@
       <section class='option'>
         <div class='shippers'>
           <i class="fa fa-cogs fa-5x"></i>
-            <p class='p-option'>SHIPPERS</p>
-          <a href="www.google.com" target="_blank">
+            <p class='p-option'>WHO WE ARE</p>
+          <a href="https://www.google.com" target="_top _blank">
             <button type="button" class="btn btn-danger" class='text-centered'>Learn More</button>
           </a>
         </div>
         <div class='carriers'>
           <i class="fa fa-truck fa-5x"></i>
-          <p class='p-option'>CARRIERS</p>
-          <a href="www.google.com" target="_blank">
+          <p class='p-option'>CORE MISSION</p>
+          <a href="https://www.google.com" target="_top _blank">
             <button type="button" class="btn btn-danger" class='text-centered'>Learn More</button>
           </a>
         </div>
         <div class='technology'>
           <i class="fa fa-globe fa-5x"></i>
-          <p class='p-option'>TECHNOLOGY</p>
-          <a href="www.google.com" target="_blank">
+          <p class='p-option'>OUR SERVICES</p>
+          <a href="https://www.google.com" target="_top _blank">
             <button type="button" class="btn btn-danger" class='text-centered'>Learn More</button>
+          </a>
+        </div>
+      </section>
+
+      <section class='intro-who'>
+        <div><img class='image-intro-who' src="image/intro-who.jpg" alt="intro-who"></div>
+        <div class='text-intro-who'>
+          <h2>ROUTE TO DIVERSITY</h2>
+          <p><b><i>MAKING A DIFFERENCE</i></b></p>
+          <p>Sudu prides itself on working with minority, women, and veteran owned trucking firms who make up a majority of the market. Our commitment to diversity ensures the opportunity for job growth, education, and the ability to maintain a successful career. </p>
+          <a href="https://www.google.com" target="_top _blank">
+            <button type="button" class="btn btn-danger" class='text-centered'>About Us</button>
           </a>
         </div>
       </section>
