--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 </head>
 <body>
 
-    <nav class="navbar sticky-top navbar-expand-lg bg-info" navbar-light bg-light">
+    <nav class="navbar sticky-top navbar-light navbar-expand-lg bg-info" >
         <a class="navbar-brand" href="#"><img src="image/logo.png" width="30" height="30" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-item nav-link text-white active" href="#">HOME</a>
+            <a class="nav-item home nav-link text-white active" href="#">HOME</a>
             <a class="nav-item nav-link text-white" href="#">WHO WE ARE</a>
             <a class="nav-item nav-link text-white" href="#">CORE MISSION</a>
             <a class="nav-item nav-link text-white" href="#">OUR SERVICES</a>
@@ -31,8 +31,8 @@
         <div class="myContainer">
             <img class="truck" src="image/truck.jpg" alt="Snow" style="width:100%;">
             <div class="centered">
-                <h1 class='text-centered2'>Tacos<br>Al Carbon</h1>
-                <p class='text-centered'>los polllitos dicen pio pio pio<br> cuando tienen hambre y cuando</p>
+                <h1 class='text-centered2'>Mr Rivera<br>Trucking</h1>
+                <p class='text-centered'>We deliver locally in the Bay Area and major cities throughout California</p>
                 <a href="https://www.google.com" target="_top _blank"><button type="button" class="btn btn-danger" class='text-centered'>Learn More</button></a>
             </div>
           </div>
@@ -48,7 +48,8 @@
 
       <section class='video'>
         <div class='video-holder'>
-                <p class='text-video'>We make shipping easy for companies and put<br> more money to trucking<br> companies faster. Watch video to learn more</p>
+                <p class='text-video'>We pride ourselves in making sure that every load that is in our care is<br>
+                  safely delivered in a timely-manner.</p>
                 <span class='my-video'>
                     <iframe class='mini' width="560" height="315" src="https://www.youtube.com/embed/GG5qVN2R9YQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </span>                 
@@ -84,12 +85,39 @@
         <div class='text-intro-who'>
           <h2>ROUTE TO DIVERSITY</h2>
           <p><b><i>MAKING A DIFFERENCE</i></b></p>
-          <p>Sudu prides itself on working with minority, women, and veteran owned trucking firms who make up a majority of the market. Our commitment to diversity ensures the opportunity for job growth, education, and the ability to maintain a successful career. </p>
+          <p>We dedicate that are clients are treated in a friendly and respectful manner while providing excellent communication to allow the transportation service flow smoothly</p>
           <a href="https://www.google.com" target="_top _blank">
             <button type="button" class="btn btn-danger" class='text-centered'>About Us</button>
           </a>
         </div>
       </section>
+      
+      <section class='intro-contact'> 
+        <div class='left'>
+            <img class='logo2'src="image/logo.png" width="60" height="60" alt="logo">
+            <p class='intro-p'>MR Rivera Trucking’s team of dedicated employees provide a smooth transportation service that guarantees every load is delivered with excellent customer service and communication.</p>
+        </div>
+        <div class='right'>
+          <h2><b>CONTACT US</b></h2>
+          <p>We would love to hear from you.</p><br>
+          <p>LOCATION: 75 5th St NW</p>
+          <p>Milpitas, CA 95035</p>
+          <p>PHONE: (408) 509-2327</p>
+          <p>EMAIL: mrriveratrucking@yahoo.com</p>
+        </div>
+      </section>
+
+      <footer>
+          <div class="card" style="background-color: black">
+              <div class="card-body">
+                      <ul id="copyright" style="color: white">
+                              <a class='my-link' href='http://www.eddycaldas.com' target="_blank">
+                                <li class='list'>© Eddy Caldas Designs. All rights reserved.</li></a>
+                                <li class='list'>2019-2020</li>
+                      </ul>
+              </div>
+        </div>
+      </footer>
 
 </body>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
