--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a class="nav-item home nav-link text-white active" href="#">HOME</a>
-            <a class="nav-item nav-link text-white" href="#">WHO WE ARE</a>
+            <a class="nav-item nav-link text-white" href="who-we-are.html">WHO WE ARE</a>
             <a class="nav-item nav-link text-white" href="#">CORE MISSION</a>
             <a class="nav-item nav-link text-white" href="#">OUR SERVICES</a>
             <a class="nav-item nav-link text-white" href="#">CONTACT US</a>
@@ -60,7 +60,7 @@
         <div class='shippers'>
           <i class="fa fa-cogs fa-5x"></i>
             <p class='p-option'>WHO WE ARE</p>
-          <a href="https://www.google.com" target="_top _blank">
+          <a href="who-we-are.html">
             <button type="button" class="btn btn-danger" class='text-centered'>Learn More</button>
           </a>
         </div>
@@ -83,9 +83,9 @@
       <section class='intro-who'>
         <div><img class='image-intro-who' src="image/intro-who.jpg" alt="intro-who"></div>
         <div class='text-intro-who'>
-          <h2>ROUTE TO DIVERSITY</h2>
+          <h2>ROUTE TO AN EXCELLENT SERVICE</h2>
           <p><b><i>MAKING A DIFFERENCE</i></b></p>
-          <p>We dedicate that are clients are treated in a friendly and respectful manner while providing excellent communication to allow the transportation service flow smoothly</p>
+          <p>We dedicate that are clients are treated in a friendly and respectful manner while providing excellent communication to allow the transportation service flow smoothly.</p>
           <a href="https://www.google.com" target="_top _blank">
             <button type="button" class="btn btn-danger" class='text-centered'>About Us</button>
           </a>
@@ -113,7 +113,11 @@
                       <ul id="copyright" style="color: white">
                               <a class='my-link' href='http://www.eddycaldas.com' target="_blank">
                                 <li class='list'>© Eddy Caldas Designs. All rights reserved.</li></a>
-                                <li class='list'>2019-2020</li>
+                                <li class='list'>
+                                <script type="text/javascript">
+                                  document.write(new Date().getFullYear());
+                                </script>
+                                </li>
                       </ul>
               </div>
         </div>
