core mission added

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 <body>
 
     <nav class="navbar sticky-top navbar-light navbar-expand-lg bg-info" >
-        <a class="navbar-brand" href="#"><img src="image/logo.png" width="30" height="30" alt=""></a>
+        <a class="navbar-brand" href="index.html"><img src="image/logo.png" width="30" height="30" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-item home nav-link text-white active" href="#">HOME</a>
+            <a class="nav-item home nav-link text-white active" href="index.html">HOME</a>
             <a class="nav-item nav-link text-white" href="who-we-are.html">WHO WE ARE</a>
-            <a class="nav-item nav-link text-white" href="#">CORE MISSION</a>
+            <a class="nav-item nav-link text-white" href="core.html">CORE MISSION</a>
             <a class="nav-item nav-link text-white" href="#">OUR SERVICES</a>
             <a class="nav-item nav-link text-white" href="#">CONTACT US</a>
           </div>
