--- a/core.html
+++ b/core.html
@@ -26,33 +26,35 @@
         </div>
       </nav>
 
-<section>
-  <div class="myContainer">
-    <img class='who-we-are-background centered2' src="image/familyOwned.jpg" alt="">
-    <div class="centered">
-        <h1 class='text-centered2'>Mr Rivera Trucking</h1>
-        <p class='text-centered'>is a family-owned transportation company located in Milpitas, CA and have been established since May 2012.</p>
-    </div>
-  </div>
-</section>
 
-  <section>
-    <ul class='ul-list ul-list2'>
-        <li class='li-list shipping'>NEED A SHIPPING<br> SOLUTION?</li>
-        <li class='li-list call'>CALL US AT (408) 509-2327</li>
-        <button type="button" class="btn btn-info" class='request'><li class='li-list'>REQUEST A <br>QUOTE</li></button>
-    </ul>
-</section>
+      <section class="truck-background">
+        <div class="myContainer">
+            <img class="truck centered3" src="image/core.jpeg" alt="Snow" style="width:100%;">
+            <div class="centered4">
+                <h1 class='text-centered2'>Ensure that our clients</h1>
+                <p class='text-centered'>Every load is handled with safety and delivered efficiently.</p>
+            </div>
+          </div>
+      </section>
 
-<section class='intro-contact intro-contact2'> 
-  <div class='left'>
-    <p class='intro-p'>MR Rivera Trucking is a family-owned transportation company located in Milpitas, CA and have been established since May 2012. We pride ourselves in making sure that every load that is in our care is safely delivered in a timely-manner.</p>
-      <p class='intro-p'>MR Rivera Trucking’s team of dedicated employees provide a smooth transportation service that guarantees every load is delivered with excellent customer service and communication.</p>
-  </div>
-  <div class='right right2'>
-    <p><b>Matson Logistics: 2018 Over the Road –Flatbed Carrier of the Year.</b></p>
-  </div>
-</section>
+
+      <section>
+        <ul class='ul-list ul-list2'>
+            <li class='li-list shipping'>NEED A SHIPPING<br> SOLUTION?</li>
+            <li class='li-list call'>CALL US AT (408) 509-2327</li>
+            <button type="button" class="btn btn-info" class='request'><li class='li-list'>REQUEST A <br>QUOTE</li></button>
+        </ul>
+    </section>
+
+      <section class='intro-contact intro-contact2'> 
+        <div class='left'>
+          <p class='intro-p'>Ensure that our clients are provided with excellent customer service during the transportation service.</p>
+            <p class='intro-p'>Every load is handled with safety and delivered efficiently.</p>
+        </div>
+        <div class='right right2'>
+          <p><b>Communication is smooth from picking up to delivery of the load.</b></p>
+        </div>
+      </section>
 
 
 
