services page uploaded

--- a/contact.html
+++ b/contact.html
@@ -17,46 +17,20 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-item home nav-link text-white" href="index.html">HOME</a>
+            <a class="nav-item home nav-link text-white active" href="index.html">HOME</a>
             <a class="nav-item nav-link text-white" href="who-we-are.html">WHO WE ARE</a>
-            <a class="nav-item nav-link text-green" href="core.html">CORE MISSION</a>
+            <a class="nav-item nav-link text-white" href="core.html">CORE MISSION</a>
             <a class="nav-item nav-link text-white" href="services.html">OUR SERVICES</a>
-            <a class="nav-item nav-link text-white" href="#">CONTACT US</a>
+            <a class="nav-item nav-link text-green" href="#">CONTACT US</a>
           </div>
         </div>
       </nav>
 
 
-      <section class="truck-background">
-        <div class="myContainer">
-            <img class="truck centered3" src="image/core.jpeg" alt="Snow" style="width:100%;">
-            <div class="centered4">
-                <h1 class='text-centered2'>Ensure that our clients</h1>
-                <p class='text-centered'>Every load is handled with safety and delivered efficiently.</p>
-            </div>
-          </div>
-      </section>
 
 
-      <section>
-        <ul class='ul-list ul-list2'>
-            <li class='li-list shipping'>NEED A SHIPPING<br> SOLUTION?</li>
-            <li class='li-list call'>CALL US AT (408) 509-2327</li>
-            <a href="contact.html">
-                <button type="button" class="btn btn-info" class='request'><li class='li-list'>REQUEST A <br>QUOTE</li></button>
-              </a>
-        </ul>
-    </section>
+<div><h1>under construction</h1></div>
 
-      <section class='intro-contact intro-contact2'> 
-        <div class='left'>
-          <p class='intro-p'>Ensure that our clients are provided with excellent customer service during the transportation service.</p>
-            <p class='intro-p'>Every load is handled with safety and delivered efficiently.</p>
-        </div>
-        <div class='right right2'>
-          <p><b>Communication is smooth from picking up to delivery of the load.</b></p>
-        </div>
-      </section>
 
 
 
