--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-item home nav-link text-white active" href="index.html">HOME</a>
+            <a class="nav-item home nav-link text-green" href="index.html">HOME</a>
             <a class="nav-item nav-link text-white" href="who-we-are.html">WHO WE ARE</a>
             <a class="nav-item nav-link text-white" href="core.html">CORE MISSION</a>
-            <a class="nav-item nav-link text-white" href="#">OUR SERVICES</a>
-            <a class="nav-item nav-link text-white" href="#">CONTACT US</a>
+            <a class="nav-item nav-link text-white" href="services.html">OUR SERVICES</a>
+            <a class="nav-item nav-link text-white" href="contact.html">CONTACT US</a>
           </div>
         </div>
       </nav>
@@ -33,7 +33,7 @@
             <div class="centered">
                 <h1 class='text-centered2'>Mr Rivera<br>Trucking</h1>
                 <p class='text-centered'>We deliver locally in the Bay Area and major cities throughout California</p>
-                <a href="https://www.google.com" target="_top _blank"><button type="button" class="btn btn-danger" class='text-centered'>Learn More</button></a>
+                <a href="services.html"><button type="button" class="btn btn-danger" class='text-centered'>Learn More</button></a>
             </div>
           </div>
       </section>
@@ -42,7 +42,9 @@
           <ul class='ul-list'>
               <li class='li-list shipping'>NEED A SHIPPING<br> SOLUTION?</li>
               <li class='li-list call'>CALL US AT (408) 509-2327</li>
-              <button type="button" class="btn btn-info" class='request'><li class='li-list'>REQUEST A <br>QUOTE</li></button>
+              <a href="contact.html">
+                <button type="button" class="btn btn-info" class='request'><li class='li-list'>REQUEST A <br>QUOTE</li></button>
+              </a>
           </ul>
       </section>
 
@@ -67,14 +69,14 @@
         <div class='carriers'>
           <i class="fa fa-truck fa-5x"></i>
           <p class='p-option'>CORE MISSION</p>
-          <a href="https://www.google.com" target="_top _blank">
+          <a href="core.html">
             <button type="button" class="btn btn-danger" class='text-centered'>Learn More</button>
           </a>
         </div>
         <div class='technology'>
           <i class="fa fa-globe fa-5x"></i>
           <p class='p-option'>OUR SERVICES</p>
-          <a href="https://www.google.com" target="_top _blank">
+          <a href="services.html">
             <button type="button" class="btn btn-danger" class='text-centered'>Learn More</button>
           </a>
         </div>
@@ -86,7 +88,7 @@
           <h2>ROUTE TO AN EXCELLENT SERVICE</h2>
           <p><b><i>MAKING A DIFFERENCE</i></b></p>
           <p>We dedicate that are clients are treated in a friendly and respectful manner while providing excellent communication to allow the transportation service flow smoothly.</p>
-          <a href="https://www.google.com" target="_top _blank">
+          <a href='who-we-are.html'>
             <button type="button" class="btn btn-danger" class='text-centered'>About Us</button>
           </a>
         </div>
