--- a/services.html
+++ b/services.html
@@ -17,25 +17,26 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-item home nav-link text-white" href="index.html">HOME</a>
+            <a class="nav-item home nav-link text-white active" href="index.html">HOME</a>
             <a class="nav-item nav-link text-white" href="who-we-are.html">WHO WE ARE</a>
-            <a class="nav-item nav-link text-green" href="core.html">CORE MISSION</a>
-            <a class="nav-item nav-link text-white" href="services.html">OUR SERVICES</a>
-            <a class="nav-item nav-link text-white" href="#">CONTACT US</a>
+            <a class="nav-item nav-link text-white" href="core.html">CORE MISSION</a>
+            <a class="nav-item nav-link text-green" href="services.html">OUR SERVICES</a>
+            <a class="nav-item nav-link text-white" href="contact.html">CONTACT US</a>
           </div>
         </div>
       </nav>
 
 
-      <section class="truck-background">
+      <section>
         <div class="myContainer">
-            <img class="truck centered3" src="image/core.jpeg" alt="Snow" style="width:100%;">
-            <div class="centered4">
-                <h1 class='text-centered2'>Ensure that our clients</h1>
-                <p class='text-centered'>Every load is handled with safety and delivered efficiently.</p>
-            </div>
+          <img class='who-we-are-background centered2' src="image/map.jpg" alt="">
+          <div class="centered centered5">
+              <h1 class='text-centered2'>What we haul?</h1>
+              <p class='text-centered'>We haul heavy machinery, military equipment, building materials, tractors, farm equipment, and many more! We deliver oversize loads as well!</p>
           </div>
+        </div>
       </section>
+
 
 
       <section>
@@ -49,12 +50,12 @@
     </section>
 
       <section class='intro-contact intro-contact2'> 
-        <div class='left'>
-          <p class='intro-p'>Ensure that our clients are provided with excellent customer service during the transportation service.</p>
-            <p class='intro-p'>Every load is handled with safety and delivered efficiently.</p>
+        <div class='left left2'>
+          <p class='intro-p'>Where do we deliver? We deliver locally in the Bay Area and major cities throughout California. We also provide transportation throughout the 48 states.</p>
+            <p class='intro-p'>What equipment do we have? We have flatbeds, RGNs, dry vans, and step decks to be able to accommodate a whole variety of loads.</p>
         </div>
-        <div class='right right2'>
-          <p><b>Communication is smooth from picking up to delivery of the load.</b></p>
+        <div class='right3 right2'>
+          <p>Why choose MR Rivera Trucking? We dedicate that are clients are treated in a friendly and respectful manner while providing excellent communication to allow the transportation service flow smoothly! Our core mission is the foundation of how each of our services is to be provided for every client.</p>
         </div>
       </section>
 
