--- a/who-we-are.html
+++ b/who-we-are.html
@@ -17,10 +17,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-item home nav-link text-white active" href="index.html">HOME</a>
-            <a class="nav-item nav-link text-white" href="who-we-are.html">WHO WE ARE</a>
+            <a class="nav-item home nav-link text-white" href="index.html">HOME</a>
+            <a class="nav-item nav-link text-green" href="who-we-are.html">WHO WE ARE</a>
             <a class="nav-item nav-link text-white" href="core.html">CORE MISSION</a>
-            <a class="nav-item nav-link text-white" href="#">OUR SERVICES</a>
+            <a class="nav-item nav-link text-white" href="services.html">OUR SERVICES</a>
             <a class="nav-item nav-link text-white" href="#">CONTACT US</a>
           </div>
         </div>
@@ -40,7 +40,9 @@
     <ul class='ul-list ul-list2'>
         <li class='li-list shipping'>NEED A SHIPPING<br> SOLUTION?</li>
         <li class='li-list call'>CALL US AT (408) 509-2327</li>
-        <button type="button" class="btn btn-info" class='request'><li class='li-list'>REQUEST A <br>QUOTE</li></button>
+        <a href="contact.html">
+          <button type="button" class="btn btn-info" class='request'><li class='li-list'>REQUEST A <br>QUOTE</li></button>
+        </a>
     </ul>
 </section>
 
